--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.html
@@ -2,40 +2,40 @@
   <div class="container">
     <div class="row">
       <div class="footer-col-1">
-        <h3>Tải App Ở Điện Thoại</h3>
+        <h3 class="zoom">Tải App Ở Điện Thoại</h3>
         <div class="app-logo">
-        <img src="../../../assets/img/app-store.png"/>
-        <img src="../../../assets/img/play-store.png"/>
+        <img src="../../../assets/img/app-store.png" class="zoom" />
+        <img src="../../../assets/img/play-store.png" class="zoom"/>
         </div>
       </div>
       <div class="footer-col-2">
-        <img src="../../../assets/img/logo-white.png"/>
-        <p>Tọa lạc tại 280, Đường Trần Hưng Đạo
+        <img src="../../../assets/img/logo-white.png" class="zoom"/>
+        <p class="zoom">Tọa lạc tại 280, Đường Trần Hưng Đạo
           An Hải, An Hải Tây, Sơn Trà, Đà Nẵng.<br>
           Số điện liên hệ: 0123456789.</p>
       </div>
       <div class="footer-col-3">
-        <h3>Được Ủy Quyền Bởi</h3>
+        <h3 class="zoom">Được Ủy Quyền Bởi</h3>
         <ul style="padding-right: 30px">
-          <li>Nike Company</li>
-          <li>Adidas Company</li>
-          <li>Converse Company</li>
-          <li>Louis Vuitton</li>
+          <li class="zoom">Nike Company</li>
+          <li class="zoom">Adidas Company</li>
+          <li class="zoom">Converse Company</li>
+          <li class="zoom">Louis Vuitton</li>
         </ul>
       </div>
 
       <div class="footer-col-4">
-        <h3>Theo Dõi Chúng Tôi</h3>
+        <h3 class="zoom">Theo Dõi Chúng Tôi</h3>
         <ul style="padding-right: 30px">
-          <li>Facebook</li>
-          <li>Tiktok</li>
-          <li>Instagram</li>
-          <li>Youtube</li>
+          <li class="zoom">Facebook</li>
+          <li class="zoom">Tiktok</li>
+          <li class="zoom">Instagram</li>
+          <li class="zoom">Youtube</li>
         </ul>
       </div>
     </div>
     <hr>
-    <p class="copyright">Copyright 2023 - Phan Tuấn Linh</p>
+    <p class="copyright zoom">Copyright 2023 - Phan Tuấn Linh</p>
   </div>
 
 </div>
