--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.css
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.css
@@ -6,21 +6,25 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
-a{
+
+a {
   text-decoration: none;
   color: #555;
 }
-p{
+
+p {
   color: #555;
 }
-.title{
+
+.title {
   text-align: center;
   margin: 0 auto 80px;
   position: relative;
   line-height: 60px;
   color: #555;
 }
-.title:after{
+
+.title:after {
   content: '';
   background: #ff523b;
   width: 80px;
@@ -31,32 +35,38 @@ p{
   left: 50%;
   transform: translateX(-50%);
 }
-.col-2{
+
+.col-2 {
   flex-basis: 50%;
   min-width: 300px;
 }
-.col-2 img{
+
+.col-2 img {
   max-width: 100%;
   padding: 50px 0;
 }
-.col-2 h1{
+
+.col-2 h1 {
   font-size: 40px;
   line-height: 60px;
   margin: 25px 0;
 }
-.offer{
+
+.offer {
   background: radial-gradient(#fff, #ffd6d6);
   margin-top: 80px;
   padding: 30px 0;
 }
 
-.col-2 .offer-img{
+.col-2 .offer-img {
   padding: 50px;
 }
-small{
+
+small {
   color: #555;
 }
-.btn{
+
+.btn {
   display: inline-block;
   background: #FF523b;
   color: #fff;
@@ -65,9 +75,11 @@ small{
   border-radius: 30px;
   transition: background 0.5s;
 }
-.btn:hover{
+
+.btn:hover {
   background: #563434;
 }
+
 .row {
   display: flex;
   align-items: center;
@@ -76,8 +88,8 @@ small{
 }
 
 
-@media (max-width:700px) {
-  .row{
+@media (max-width: 700px) {
+  .row {
     flex-direction: column;
   }
 }
@@ -91,61 +103,73 @@ small{
   min-width: 250px;
   margin-bottom: 30px;
 }
-.col-3 img{
+
+.col-3 img {
   width: 100%;
 }
-.small-container{
+
+.small-container {
   max-width: 1080px;
   margin: auto;
   padding-left: 25px;
   padding-right: 25px;
 }
-.col-4{
+
+.col-4 {
   flex-basis: 25%;
   padding: 10px;
   min-width: 200px;
   margin-bottom: 50px;
 }
-.col-4 img{
+
+.col-4 img {
   width: 100%;
 }
-.row-2{
+
+.row-2 {
   justify-content: space-between;
   margin: 100px auto 50px;
 }
-select{
+
+
+select {
   border: 1px solid #ff523b;
   padding: 5px;
 }
-select:focus{
+
+select:focus {
   outline: none;
 }
-.brands{
+
+.brands {
   margin: 100px auto;
 }
-.col-5{
+
+.col-5 {
   width: 160px;
 }
-.col-5 img{
+
+.col-5 img {
   width: 100%;
   cursor: pointer;
-  filter: grayscale(100%);
+  filter: grayscale(0%);
 }
-.col-5 img:hover{
+
+.col-5 img:hover {
   filter: grayscale(0);
 }
 
-.zoom{
+.zoom {
   transform: scale(1);
   transition: 0.5s;
 }
-.zoom:hover{
+
+.zoom:hover {
   transform: scale(1.1);
 }
 
 
-
-.my-card{
+.my-card {
   width: 270px;
   height: 370px;
   border-radius: 20px;
@@ -153,13 +177,15 @@ select:focus{
   border: 8px solid #fff;
   position: relative;
 }
-.my-card-img{
+
+.my-card-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 15px;
 }
-.my-card-body{
+
+.my-card-body {
   width: 100%;
   height: 100%;
   top: 0;
@@ -174,23 +200,27 @@ select:focus{
   justify-content: center;
   transition: 1s;
 }
-.my-card:hover .my-card-body{
+
+.my-card:hover .my-card-body {
   right: 0;
 }
-.my-card-title{
+
+.my-card-title {
   padding-left: 10px;
-  font-size: 50px;
+  font-size: 35px;
   font-weight: 500;
 }
-.my-card-subtitle{
+
+.my-card-subtitle {
   text-transform: capitalize;
   font-size: small;
   font-weight: 300;
   color: white;
   padding: 20px 10px;
 }
-.my-card-btn{
-color: #fff;
+
+.my-card-btn {
+  color: #fff;
   background: #ff523b;
   padding: 10px 20px;
   width: 120px;
@@ -200,4 +230,38 @@ color: #fff;
   outline: none;
   font-weight: 500;
   cursor: pointer;
+}
+
+.form{
+  background: #fff;
+  width: 400px;
+  display: flex;
+  border: 1px solid #ff523b;
+  height: 35px;
+}
+.form input{
+  flex: 1;
+  border: none;
+  outline: none;
+}
+.form button{
+  background: tomato;
+  padding: 0px 20px;
+  border: none;
+  color: #fff;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+.form .fa-sharp{
+  align-self: center;
+  padding: 10px 10px;
+  color: #777;
+}
+ ul{
+  display: inline-block;
+  list-style-type: none;
+}
+ ul li{
+  display: inline-block;
+  margin-right: 20px;
 }
