--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.css
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.css
@@ -55,3 +55,11 @@ list-style-type: none;
 .copyright{
   text-align: center;
 }
+.zoom {
+  transform: scale(1);
+  transition: 0.5s;
+}
+
+.zoom:hover {
+  transform: scale(1.1);
+}
