--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/header/header.component.css
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/header/header.component.css
@@ -72,15 +72,180 @@ p{
 .header .row{
   margin-top: 70px;
 }
-.zoom1{
-  transform: scale(1);
-  transition: 0.5s;
-}
-.zoom1:hover{
-  transform: scale(1.3);
-}
+
 .scroll-to-top{
   position: fixed;
   z-index: 1;
   margin-left: 94%;
 }
+form{
+  background: #fff;
+  width: 400px;
+  display: flex;
+}
+form input{
+  flex: 1;
+  border: none;
+  outline: none;
+}
+form button{
+  background: tomato;
+  padding: 10px 10px;
+  border: none;
+  color: #fff;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+form .fa-sharp{
+  align-self: center;
+  padding: 10px 20px;
+  color: #777;
+}
+
+@keyframes showtop{
+  from{
+    opacity: 0;
+    transform: translate(0,50px);
+  }to{
+     opacity: 1;
+     transform: translate(0,0);
+   }
+}
+.animationTop {
+  opacity: 0;
+  animation:showtop 0.5s ease-in-out 1 forwards;
+}
+.delay-01{
+  animation-delay: 0.1s!important;
+}
+.delay-02{
+  animation-delay: 0.2s!important;
+}
+.delay-03{
+  animation-delay: 0.3s!important;
+}
+.delay-04{
+  animation-delay: 0.4s!important;
+}
+.delay-05{
+  animation-delay: 0.5s!important;
+}
+.delay-06{
+  animation-delay: 0.6s!important;
+}
+.delay-07{
+  animation-delay: 0.7s!important;
+}
+.delay-08{
+  animation-delay: 0.8s!important;
+}
+.delay-09{
+  animation-delay: 0.9s!important;
+}
+.delay-10{
+  animation-delay: 1s!important;
+}
+.delay-11{
+  animation-delay: 1.1s!important;
+}
+.delay-12{
+  animation-delay: 1.2s!important;
+}
+.delay-13{
+  animation-delay: 1.3s!important;
+}
+.delay-14{
+  animation-delay: 1.4s!important;
+}
+.delay-15{
+  animation-delay: 1.5s!important;
+}
+.delay-16{
+  animation-delay: 1.6s!important;
+}
+.delay-17{
+  animation-delay: 1.7s!important;
+}
+.delay-18{
+  animation-delay: 1.8s!important;
+}
+.delay-19{
+  animation-delay: 1.9s!important;
+}
+.delay-20{
+  animation-delay: 2s!important;
+}
+.delay-21{
+  animation-delay: 2.1s!important;
+}
+.delay-22{
+  animation-delay: 2.2s!important;
+}
+.delay-23{
+  animation-delay: 2.3s!important;
+}
+.delay-24{
+  animation-delay: 2.4s!important;
+}
+.zoom1{
+  transform: scale(1);
+  transition: 0.5s;
+}
+.zoom1:hover{
+  transform: scale(1.2);
+}
+
+
+.dropbtn {
+  background-color: #FF523b;
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 150px;
+  height: 40px;
+  border-radius: 15px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown i{
+  padding-left: 13px;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #FF523b;
+  min-width: 150px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 15px;
+
+}
+
+/* Links inside the dropdown */
+.dropdown-content a{
+  color: #fff;
+  text-align: left;
+  padding-left: 10px;
+  text-decoration: none;
+  display: block;
+  padding-top: 10px;
+
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #e79178; border-radius: 15px}
+
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+/*.dropdown:hover .dropbtn {*/
+/*  background-color: #180808;*/
+/*}*/
