--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/shoe-detail/shoe-detail.component.css
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/shoe-detail/shoe-detail.component.css
@@ -67,3 +67,12 @@ p{
 input:focus{
   outline: none;
 }
+.btn1{
+  display: inline-block;
+  background: rgba(64, 59, 59, 0.61);
+  color: #fff;
+  padding: 8px 10px;
+  margin-left: 30px;
+  border-radius: 30px;
+  transition: background 0.5s;
+}
