--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/security/login/login.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/security/login/login.component.html
@@ -11,15 +11,23 @@
     </div>
 
     <!-- Login Form -->
-    <form>
-      <input type="text" id="login" class="fadeIn second" name="login" placeholder="Tài khoản">
-      <input type="password" id="password" class="fadeIn third" name="login" placeholder="Mật khẩu">
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <input type="text" id="login" class="fadeIn second" name="login" placeholder="Tài khoản" formControlName="username">
+      <input type="password" id="password" class="fadeIn third" name="login" placeholder="Mật khẩu" formControlName="password">
+      <div class="inputfield terms">
+        <label class="check">
+          <input type="checkbox" formControlName="rememberMe">
+          <span class="checkmark"></span>
+        </label>
+        <p>Ghi nhớ đăng nhập</p>
+      </div>
       <input type="submit" class="fadeIn fourth" value="Đăng nhập">
+
     </form>
 
     <!-- Remind Passowrd -->
     <div id="formFooter">
-      <a class="underlineHover" href="#">Đăng ký</a>
+      <a class="underlineHover" routerLink="/security/create">Đăng ký</a>
     </div>
 
   </div>
