--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.html
@@ -35,7 +35,7 @@
       </div>
     </div>
     <hr>
-    <p class="copyright zoom">Copyright 2023 - Phan Tuấn Linh</p>
+    <p class="copyright">Copyright 2023 - Phan Tuấn Linh</p>
   </div>
 
 </div>
