--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.css
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.css
@@ -207,7 +207,7 @@ select:focus {
 
 .my-card-title {
   padding-left: 10px;
-  font-size: 35px;
+  font-size: 25px;
   font-weight: 500;
 }
 
@@ -221,9 +221,9 @@ select:focus {
 
 .my-card-btn {
   color: #fff;
-  background: #ff523b;
+  /*background: #ff523b;*/
   padding: 10px 20px;
-  width: 120px;
+  width: 80px;
   border-radius: 5px;
   text-transform: capitalize;
   border: none;
@@ -265,3 +265,5 @@ select:focus {
   display: inline-block;
   margin-right: 20px;
 }
+
+
