--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.html
@@ -13,8 +13,13 @@
 </div>
 
 <div class="small-container">
+  <h2 class="title zoom">Sản Phẩm Mới Nhất</h2>
+
+</div>
+
+<div class="small-container">
   <h2 class="title zoom">Sản Phẩm Của Chúng Tôi</h2>
-  <div style="margin-left: 64%; display: flex">
+  <div style="margin-left: 67%; display: flex">
     <select style="margin-right: 15px" [(ngModel)]="category" (change)="getAllProduct(size)">
       <option value="">Tất cả</option>
       <option *ngFor="let item of categoryList" [value]="item.categoryName" >{{item.categoryName}}</option>
@@ -27,25 +32,29 @@
   </div>
 </div>
 <div>
-  <div style="margin-top: 10px">
+
+  <div>
     <div class="row">
       <div class="card col-3" *ngFor="let item of pageSize">
-
           <div class="my-card" style="margin-left: 60px">
             <img [src]="item.avatar" class="my-card-img"/>
             <div class="my-card-body">
-              <h6 class="my-card-title">{{item.productName | slice:0:10}}...</h6>
+              <a><i class="fa-regular fa-trash-can fa-bounce fa-xl" style="color: #fc0b0b; float: right; padding-bottom: 70px; margin-right: 15px; cursor: pointer"></i></a>
+              <h6 class="my-card-title">{{item.productName }}</h6>
               <!--    <i class="fa-thin fa-badge">Giảm giá</i>-->
-              <h3
-                style="margin-left: 10px; color: red; padding-top: 20px">{{item.price | currency:'VND':'symbol-narrow':'1.0-0'}}</h3>
-              <p class="my-card-subtitle">{{item.description | slice: 0: 100}}...<span
-                style="color: red; display: inline-block">Xem thêm</span></p>
+<!--              <h3 style="margin-left: 10px; color: red; padding-top: 20px">{{item.price | currency:'VND':'symbol-narrow':'1.0-0'}}</h3>-->
+              <h3 style="margin-left: 10px; color: red; padding-top: 20px">{{item.price | number:'1.0-0'}} VNĐ</h3>
+              <p class="my-card-subtitle">{{item.description | slice: 0: 100}}...</p>
+              <div style="display: block">
               <a [routerLink]="['/detail',item.productId]">
-              <button class="my-card-btn" style="margin-left: 10px">Xem chi tiết</button>
+                <button class="my-card-btn" style="margin-left: 17px; background:  #2fb1bd"><i class="fa-solid fa-circle-info fa-shake" style="font-size: 20px"></i></button>
               </a>
+              <a>
+              <button class="my-card-btn" style="margin-left: 73px; background:  #f44336" (click)= "addToCart(item)"><i class="fa-sharp fa-solid fa-cart-plus fa-beat" style="font-size: 20px"></i></button>
+              </a>
+              </div>
             </div>
           </div>
-
       </div>
     </div>
   </div>
@@ -99,4 +108,8 @@
   </div>
 </div>
 
+
 </body>
+<ng-template #emptyCart>
+  <h3 style="color: red; text-align: center">Chưa có sản phẩm nào trong giỏ hàng <span style="font-size: 35px">😢</span></h3>
+</ng-template>
