--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/header/header.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/header/header.component.html
@@ -9,13 +9,14 @@
     <ul>
 
       <li class="animationTop delay-03"><a routerLink="/">Trang Chủ</a></li>
-      <li class="animationTop delay-03"><a routerLink="/home/create">Thêm Mới</a></li>
-      <li class="animationTop delay-04"><a href="#"></a>Lịch Sử Mua Hàng</li>
+      <li class="animationTop delay-03"><a routerLink="/home/create" >Thêm Mới</a></li>
+      <li class="animationTop delay-03"><a routerLink="/home/create">Kho Hàng</a></li>
+      <li class="animationTop delay-04"><a routerLink="/">Lịch Sử Mua Hàng</a></li>
       <li class="animationTop delay-05"><a routerLink="/security" *ngIf="!isLoggedIn">Đăng Nhập</a></li>
       <li>
         <div class="dropdown" *ngIf="isLoggedIn">
-
-          <button class="dropbtn">{{user.name}}<i class="fa-solid fa-angle-down"></i></button>
+          <button class="dropbtn">{{user.name}}</button>
+<!--          <img src="{{user?.avatar}}" style="width: 30px; height: 30px; border-radius: 50%">-->
           <div class="dropdown-content">
 <!--            <img src="{{user?.avatar}}" style="width: 40px; background-image: none; border-radius: 50%; height: 40px" height="24" width="24" >-->
             <a href="#">Thông tin cá nhân</a>
@@ -23,10 +24,12 @@
             <a (click)="logout()">Đăng xuất</a>
           </div>
         </div>
+<!--        <i class="fa-solid fa-angle-down"></i>-->
+      </li>
     </ul>
   </nav>
 <a routerLink="/cart">
-  <img src="../../../assets/img/cart.png" width="30px" height="30px" class="animationTop delay-06"/>
+  <img src="../../../assets/img/cart.png" width="30px" height="30px" class="animationTop delay-06"/>{{length}}
 </a>
 </div>
 
